# Nano-DB

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  repro_failover_loss.py  verify_compaction.py
.github/workflows/: ci.yml
benchmarks/: benchmark_recall.cpp  benchmark_throughput.cpp  cluster_benchmark.py  cluster_benchmark_results.json
cluster/: cluster_config.hpp  coordinator_main.cpp  hash_ring.hpp  metrics_registry.hpp  raft_config.hpp  raft_log.hpp  raft_node.hpp  raft_service_impl.hpp  raft_state.hpp  routing.hpp  shard_service_impl.hpp
deploy/: Dockerfile.distributed  cluster.docker.json  cluster.local.json  docker-compose.cluster.yml  docker-compose.monitoring.yml  prometheus.yml  raft_peers.docker.json  raft_peers.local.json
deploy/grafana/: dashboard.json
deploy/grafana/provisioning/dashboards/: nanodb.yml
docs/: INTERNALS.md
docs/images/: README.txt
include/index/: distance.hpp  graph_node.hpp  hnsw.hpp  quantizer.hpp
proto/: nanodb_cluster.proto  raft.proto
src/: main.cpp  python_bindings.cpp  server.cpp
src/index/: distance.cpp
src/storage/: memory_map.cpp
tests/: CMakeLists.txt  test_distance.cpp  test_hash_ring.cpp  test_hnsw.cpp  test_persistence.cpp  test_raft_commit_safety.cpp  test_raft_log_compaction.cpp
website/: .env.example  package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/components/: Architecture.tsx  Header.tsx  Hero.tsx  Playground.tsx
